# project_x

./: .gitignore  Readme.md  dev.env  pyproject.toml
data/sentiment_analysis/: transcript_0.txt  transcript_1.txt  transcript_10.txt  transcript_101.txt  transcript_103.txt  transcript_105.txt  transcript_106.txt  transcript_107.txt  transcript_108.txt  transcript_11.txt  transcript_112.txt  transcript_114.txt  transcript_12.txt  transcript_120.txt  transcript_122.txt  transcript_126.txt  transcript_127.txt  transcript_129.txt  transcript_13.txt  transcript_131.txt  transcript_132.txt  transcript_138.txt  transcript_14.txt  transcript_143.txt  transcript_147.txt  transcript_149.txt  transcript_153.txt  transcript_154.txt  transcript_155.txt  transcript_157.txt  transcript_159.txt  transcript_16.txt  transcript_160.txt  transcript_161.txt  transcript_163.txt  transcript_165.txt  transcript_168.txt  transcript_169.txt  transcript_170.txt  transcript_171.txt  (+53 more)
data/sentiment_analysis/delta/: part-00001-33e642ac-89c7-4698-bc2c-d3c830438ad6-c000.snappy.parquet  part-00001-735470d1-add0-409f-87d4-b1b3ac256f1e-c000.snappy.parquet  part-00001-7a0bdac7-455c-42e3-ba4e-372296d1d8bd-c000.snappy.parquet  (+1 more)
deprecate/: depression_analysis.ipynb  src_depression_analysis.ipynb
src/: nb_main_da.ipynb  nb_main_sa_actions.ipynb  py_main_sa_actions.py
src/Test/: test_transform.py
src/ai/: depression_analysis.py  sentiment_analysis.py
src/bi/: sentiment_insights.py
src/common/: actions.py  summarize.py
src/data/: transform.py  visualize.py
src/llmops/: eval.py
(+97 files in other folders)
